--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 			<a href="#two">- Who am i?</a><br>
 			<a href="#three">- Web design and me</a><br>
 			<a href="#four">- About this blog</a><br><br>
-			<a href="index1.html" style="text-decoration: underline;">Blog Posts</a><br><br>
-			<a href="index2.html" style="text-decoration: underline;">Reflections</a><br><br>
-			<a href="index3.html" style="text-decoration: underline;">Interaction Design work</a>
+			<a href="C:\Users\Christian\Desktop\Portfolio Website\index1.html" style="text-decoration: underline;">Blog Posts</a><br><br>
+			<a href="C:\Users\Christian\Desktop\Portfolio Website\index2.html" style="text-decoration: underline;">Reflections</a><br><br>
+			<a href="C:\Users\Christian\Desktop\Portfolio Website\index3.html" style="text-decoration: underline;">Interaction Design work</a>
 		</nav> <br><br>
 		<br>
 
