--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 			<a href="#two">- Who am i?</a><br>
 			<a href="#three">- Web design and me</a><br>
 			<a href="#four">- About this blog</a><br><br>
-			<a href="C:\Users\Christian\Desktop\Portfolio Website\index1.html" style="text-decoration: underline;">Blog Posts</a><br><br>
-			<a href="C:\Users\Christian\Desktop\Portfolio Website\index2.html" style="text-decoration: underline;">Reflections</a><br><br>
-			<a href="C:\Users\Christian\Desktop\Portfolio Website\index3.html" style="text-decoration: underline;">Interaction Design work</a>
+			<a href="index1.html" style="text-decoration: underline;">Blog Posts</a><br><br>
+			<a href="index2.html" style="text-decoration: underline;">Reflections</a><br><br>
+			<a href="index3.html" style="text-decoration: underline;">Interaction Design work</a>
 		</nav> <br><br>
 		<br>
 
@@ -42,9 +42,9 @@
 		<section id="two">
 			<h2>Who am I?</h2>
 			<p>My name is Christian Dsouza. I am 19 years old and inside my second year at Victoria University of Wellington studying a degree in Interaction design. I live and grew up in Wellington and I attended a school called Tawa college (for 5 years) which is about 30 minutes from town. A bit about myself outside of studying is that i have a job working at Converse (outlet store) which i have been for almost one and a half year so far. I am and have been very much into sports including physical activities since i was 5 years old and started playing cricket and football which in fact is still my favorite sport.</p>
-		<img src="C:\Users\Christian\Desktop\Portfolio Website\img\tc.png" style="height: 200px; width: 200px; margin-top: 50px; margin-left: 50px;" ><br>
-		<img src="C:\Users\Christian\Desktop\Portfolio Website\img\vuw.png" style="height: 280px; width: 300px;  margin-top: -250px; margin-left: 350px;"><br>
-		<img src="C:\Users\Christian\Desktop\Portfolio Website\img\cv.png" style="height: 350px; margin-top: -315px; margin-left: 600px;">
+		<img src="img\tc.png" style="height: 200px; width: 200px; margin-top: 50px; margin-left: 50px;" ><br>
+		<img src="img\vuw.png" style="height: 280px; width: 300px;  margin-top: -250px; margin-left: 350px;"><br>
+		<img src="img\cv.png" style="height: 350px; margin-top: -315px; margin-left: 600px;">
 		
 		</section>
 	</header>
@@ -71,15 +71,15 @@
 <div id="slideshow">
 
 	<div>
-	  <img src="C:\Users\Christian\Desktop\Portfolio Website\img\w1.JPG" style="width:1430px; height:500px; margin-left: -252px;"/>
+	  <img src="img\w1.JPG" style="width:1430px; height:500px; margin-left: -252px;"/>
 	</div>
 	
 	<div>
-	  <img src="C:\Users\Christian\Desktop\Portfolio Website\img\w2.JPG" style="width:1430px; height:500px; margin-left: -252px;"/>
+	  <img src="img\w2.JPG" style="width:1430px; height:500px; margin-left: -252px;"/>
 	</div>
 	
 	<div>
-	  <img src="C:\Users\Christian\Desktop\Portfolio Website\img\w3.JPG" style="width:1430px; height:500px; margin-left: -252px;"/>
+	  <img src="img\w3.JPG" style="width:1430px; height:500px; margin-left: -252px;"/>
 	</div>
 
 </div>
