--- a/index2.html
+++ b/index2.html
@@ -26,16 +26,16 @@
 			<a href="#two">- Benefits of using Github</a><br>
 			<a href="#three">- -</a><br>
 			<a href="#four">- -</a><br><br>
-            <a href="C:\Users\Christian\Desktop\Portfolio Website\index1.html" style="text-decoration: underline;">Blog posts</a><br><br>
-            <a href="C:\Users\Christian\Desktop\Portfolio Website\index.html" style="text-decoration: underline;">Home</a><br><br>
-            <a href="C:\Users\Christian\Desktop\Portfolio Website\index3.html" style="text-decoration: underline;">Interaction Design work</a>
+            <a href="index1.html" style="text-decoration: underline;">Blog posts</a><br><br>
+            <a href="index.html" style="text-decoration: underline;">Home</a><br><br>
+            <a href="index3.html" style="text-decoration: underline;">Interaction Design work</a>
         </section>
         </nav> <br><br>
 <br>
 
         <header>
 	<section id="two">
-      <img src="C:\Users\Christian\Desktop\Portfolio Website\img\git.jpg" style="height: 700px;  width: 1500px; margin-left: -252px; padding-top: 10px;" > 
+      <img src="img\git.jpg" style="height: 700px;  width: 1500px; margin-left: -252px; padding-top: 10px;" > 
       <h3><strong>Benefits of using GitHub</strong></h3>
       <br><hr><br>
       One big benefit to using Git is that you can collaborate on projects through one channel (repository) with which whenever changes are made to the project, Git will keep track of all changes made so no work is lost. People in different areas would also be able to work on the same project through cloning and creating their own local repositories in which the changes can be committed to the central repository and saved in its history so everyone can still see them.
