--- a/index1.html
+++ b/index1.html
@@ -28,9 +28,9 @@
 			<a href="#four">- Flexbox tut</a><br>
 			<a href="#five">- Javascript Baby Steps</a><br>
 			<a href="#six">- Dark Mode/Light Mode</a><br><br>
-			<a href="C:\Users\Christian\Desktop\Portfolio Website\index.html" style="text-decoration: underline;">Home</a><br><br>
-			<a href="C:\Users\Christian\Desktop\Portfolio Website\index2.html" style="text-decoration: underline;">Reflections</a><br><br>
-			<a href="C:\Users\Christian\Desktop\Portfolio Website\index3.html" style="text-decoration: underline;">Interaction Design work</a>
+			<a href="index.html" style="text-decoration: underline;">Home</a><br><br>
+			<a href="index2.html" style="text-decoration: underline;">Reflections</a><br><br>
+			<a href="index3.html" style="text-decoration: underline;">Interaction Design work</a>
         </section>
         </nav> <br><br><br><br>
 <br>
